--- a/index.html
+++ b/index.html
@@ -2,9 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta 
+      name="viewport" 
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" 
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/logoNobg.png" type="image/svg+xml" />
+
+    <!-- Short Title -->
+    <title>Alienmeet</title>
+
+    <!-- Core description (for SEO & share previews) -->
+    <meta name="description" content="No borders. Just people." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type"        content="website" />
+    <meta property="og:title"       content="AlienMeet" />
+    <meta property="og:description" content="No borders. Just people." />
+    <meta property="og:image"       content="/logoNobg.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card"        content="summary_large_image" />
+    <meta name="twitter:title"       content="AlienMeet" />
+    <meta name="twitter:description" content="No borders. Just people." />
+    <meta name="twitter:image"       content="/logoNobg.png" />
+
+    <!-- Theme color for mobile browsers -->
+    <meta name="theme-color" content="#000000" />
+
   </head>
   <body>
     <div id="root"></div>
